# Farol

./: .gitignore  Cargo.toml  README.md  doc.org  meson.build  nob  nob.c  todo.org
.github/workflows/: c-cpp.yml  rust.yml
src/: main.c  main.rs  meson.build  string_interner.h  string_pool.c  string_pool.h  test.h
src/bytefiles/: mod.rs
src/irep/: irep.c  irep.h  mod.rs  string_container.rs
