project(
  'Farol',      # Project name
  'c',              # Primary language
  version : '0.1'    # Project version
)
install_dirs = {
  'bindir' : 'bin',
  'includedir' : 'include'
}

c_args = ['-Wall', '-Wextra', '-Werror', '-std=c11']
subdir('src')
# subdir(test_dir)

# executable(
#   'myapp',                  # Executable name
#   ['src/main.c'],           # Source files

#   c_args : c_args
# )


